--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,7 @@
             android:exported="false" />
         <activity
             android:name=".InputDeviceSelector"
-            android:exported="true" />
-
-        <service
-            android:name=".ForegroundService"
-            android:enabled="true"
-            android:exported="true" />
+            android:exported="false" />
 
         <activity
             android:name=".MainActivity"
