--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,5 +20,11 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
       run: ./gradlew assembleDebug
+      
+    - uses: actions/upload-artifact@v3
+      with:
+        name: debug apk
+        path: app/build/outputs/apk/debug/app-debug.apk
