--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,11 +22,22 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
+
     - name: Build with Gradle
+      run: ./gradlew build
+      
+    - name: Build debug APK
       run: ./gradlew assembleDebug
+
+    - name: Build release APK
+      run: ./gradlew assembleRelease
       
     - uses: actions/upload-artifact@v3
       with:
-        name: debug apk
+        name: Debug APK
         path: app/build/outputs/apk/debug/app-debug.apk
+
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Release APK
+        path: app/build/outputs/apk/release/app-release.apk
