Add more ABIs and compile for Java 11

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
          ndk {
-            abiFilters 'x86'
-           }
+            abiFilters 'x86_64', 'x86', 'arm64-v8a'
+         }
     }
       externalNativeBuild {
         ndkBuild {
@@ -30,10 +30,9 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
-
 
     ndkVersion '25.1.8937393'
 }
