Implement per game profiles feature Merge branch dev into main: # Conflicts: #	app/src/main/cpp/mouse_read.c #	app/src/main/java/com/xtr/keymapper/Input.java #	app/src/main/java/com/xtr/keymapper/Server.java #	app/src/main/java/com/xtr/keymapper/TouchPointer.java #	app/src/main/java/com/xtr/keymapper/activity/EditorUI.java #	app/src/main/java/com/xtr/keymapper/activity/MainActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     <uses-permission
         android:name="android.permission.INJECT_EVENTS"
         tools:ignore="ProtectedPermissions" />
@@ -19,7 +20,7 @@
             android:name=".activity.InfoActivity"
             android:exported="false" />
         <activity
-            android:name=".InputDeviceSelector"
+            android:name=".activity.InputDeviceSelector"
             android:exported="false" />
         <activity
             android:name=".activity.EditorUI"
@@ -29,10 +30,8 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
