--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
 
-        applicationId "com.xtr.keymapper"
+        applicationId "xtr.keymapper"
         minSdk 28
         targetSdk 32
         versionCode 2
@@ -41,7 +41,7 @@ android {
     packagingOptions.jniLibs.useLegacyPackaging true
 
     ndkVersion '25.1.8937393'
-    namespace 'com.xtr.keymapper'
+    namespace 'xtr.keymapper'
 }
 
 dependencies {
