--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,11 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+        </intent>
+    </queries>
     <uses-permission
         android:name="android.permission.INJECT_EVENTS"
         tools:ignore="ProtectedPermissions" />
@@ -23,9 +27,6 @@
         <activity
             android:name=".activity.InputDeviceSelector"
             android:theme="@style/Theme.Material3.Dark.DialogWhenLarge"
-            android:exported="false" />
-        <activity
-            android:name=".activity.EditorUI"
             android:exported="false" />
         <activity
             android:name=".activity.MainActivity"
