Add system service / Implement aidl

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
+    compileOnly project(path: ':app:hidden-api')
 }
