--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.core:core:1.9.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
+    implementation "com.leinardi.android:speed-dial:3.3.0"
+
     compileOnly project(path: ':app:hidden-api')
 }
