Resize dpad in fixed ratio and from center in editor ui #14 Moved to package xtr.keymapper.editor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.XtMapper">
         <service
-            android:name=".EditorService"
+            android:name=".editor.EditorService"
             android:enabled="true"
             android:exported="false" />
 
