--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "gradle" # See documentation for possible values
-    directory: "/app" # Location of package manifests
+    directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
