--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ plugins {
 }
 
 android {
+    namespace 'xtr.keymapper'
     compileSdk 33
 
     defaultConfig {
-
         applicationId "xtr.keymapper"
         minSdk 28
         targetSdk 33
@@ -24,10 +24,6 @@ android {
         }
     }
 
-    buildFeatures {
-        viewBinding true
-    }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -38,17 +34,19 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    buildFeatures {
+        viewBinding true
+        aidl true
+    }
     packagingOptions.jniLibs.useLegacyPackaging true
 
     ndkVersion '25.1.8937393'
-    namespace 'xtr.keymapper'
 }
 
 dependencies {
-    implementation "androidx.core:core:1.10.1"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
-
     implementation 'com.google.android.material:material:1.9.0'
     implementation "com.leinardi.android:speed-dial:3.3.0"
 
