Add input method #18

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,17 @@
         <service
             android:name=".TouchPointer"
             android:enabled="true" />
+
+        <!-- Declares the input method service. -->
+        <service android:name=".service.InputListenerService"
+            android:exported="true"
+            android:permission="android.permission.BIND_INPUT_METHOD">
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
+            <meta-data android:name="android.view.im"
+                android:resource="@xml/method"/>
+        </service>
     </application>
 
 </manifest>
