fix: wrong service name in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         </activity>
 
         <service
-            android:name=".touchpointer.TouchPointer"
+            android:name="TouchPointer"
             android:enabled="true" />
 
         <!-- Declares the input method service. -->
