--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,13 +14,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 11
+    - name: set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-
+        
+    - uses: actions/cache@v3
+    - name: cache Android sdk
+      with:
+        path: |
+         ~/Android
+        key: ${{ runner.os }}-gradle-android
+           
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
@@ -31,3 +38,4 @@ jobs:
       with:
         name: Debug APK
         path: app/build/outputs/apk/debug/app-debug.apk
+    
