--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 17
+
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -23,10 +24,9 @@ jobs:
         
     - uses: actions/cache@v3
       with:
-        name: cache Android sdk
         path: |
-         ~/Android
-        key: ${{ runner.os }}-gradle-android
+         /usr/local/lib/android/sdk/ndk
+        key: ${{ runner.os }}-android-ndk
            
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -38,4 +38,3 @@ jobs:
       with:
         name: Debug APK
         path: app/build/outputs/apk/debug/app-debug.apk
-    
