--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     buildFeatures {
         viewBinding true
         aidl true
+        buildConfig true
     }
     packagingOptions.jniLibs.useLegacyPackaging true
 
@@ -48,7 +49,9 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation 'com.google.android.material:material:1.9.0'
-    implementation "com.leinardi.android:speed-dial:3.3.0"
+    implementation 'com.leinardi.android:speed-dial:3.3.0'
+    implementation "dev.rikka.shizuku:api:13.1.4"
+    implementation "dev.rikka.shizuku:provider:13.1.4"
 
     compileOnly project(path: ':app:hidden-api')
 }
