--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,6 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/Theme.XtMapper">
-        <service
-            android:name=".editor.EditorService"
-            android:enabled="true"
-            android:exported="false" />
 
         <activity
             android:name=".activity.InfoActivity"
@@ -36,6 +32,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".editor.EditorActivity"
+            android:exported="true"
+            android:theme="@style/Theme.XtMapper.EditorUI">
+            <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
