--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
          ndk {
             abiFilters 'x86_64', 'x86', 'arm64-v8a'
          }
+        aaptOptions {
+            ignoreAssetsPattern ''
+        }
     }
       externalNativeBuild {
         ndkBuild {
@@ -49,6 +52,6 @@ dependencies {
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
     implementation 'com.google.android.material:material:1.9.0'
     implementation "com.leinardi.android:speed-dial:3.3.0"
-
+    implementation 'androidx.webkit:webkit:1.7.0'
     compileOnly project(path: ':app:hidden-api')
 }
