feat: add touchpad to direct touch refactor: build x86_64 only APK to reduce size

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
          ndk {
-            abiFilters 'x86_64', 'x86', 'arm64-v8a'
+            abiFilter 'x86_64'
          }
         aaptOptions {
             ignoreAssetsPattern ''
