Add libsu dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation "com.leinardi.android:speed-dial:3.3.0"
     implementation 'androidx.webkit:webkit:1.8.0'
+    // The core module that provides APIs to a shell
+    implementation "com.github.topjohnwu.libsu:core:5.2.1"
+    // Optional: APIs for creating root services. Depends on ":core"
+    implementation "com.github.topjohnwu.libsu:service:5.2.1"
     compileOnly project(path: ':app:hidden-api')
 }
