--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
 
     <queries>
         <intent>
@@ -49,7 +51,8 @@
 
         <service
             android:name="TouchPointer"
-            android:enabled="true" />
+            android:enabled="true"
+            android:foregroundServiceType="specialUse"/>
 
         <!-- Declares the input method service. -->
         <service android:name=".service.InputListenerService"
