--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,13 @@ android {
     }
 
     ndkVersion '26.1.10909125'
+    
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs.
+        includeInApk = false
+        // Disables dependency metadata when building Android App Bundles.
+        includeInBundle = false
+    }
 }
 
 dependencies {
