--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ name: Build and Release APK
 on:
   workflow_dispatch:
   push:
-    paths:
-      - '**.yml'
+    tags:
+      - "v*"
 
 jobs:
   build-docs:
@@ -59,6 +59,7 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
+        draft: true
         files: |
           app/build/outputs/apk/release/*.apk
          
