refactor: Use BuildConfig

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ android {
     buildFeatures {
         viewBinding true
         aidl true
+        buildConfig true
     }
     packagingOptions.jniLibs.useLegacyPackaging true
 
