--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <queries>
         <intent>
             <action android:name="android.intent.action.MAIN" />
@@ -25,11 +24,15 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/Theme.XtMapper">
+        <service
+            android:name=".editor.EditorService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity
             android:name=".activity.InfoActivity"
             android:exported="false"
-            android:theme="@style/Theme.Design.NoActionBar"/>
+            android:theme="@style/Theme.Design.NoActionBar" />
         <activity
             android:name=".activity.MainActivity"
             android:exported="true">
@@ -39,7 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".editor.EditorActivity"
             android:exported="true"
@@ -50,27 +52,28 @@
         </activity>
 
         <service
-            android:name="TouchPointer"
+            android:name=".TouchPointer"
             android:enabled="true"
-            android:foregroundServiceType="specialUse"/>
-
-        <!-- Declares the input method service. -->
-        <service android:name=".service.InputListenerService"
+            android:foregroundServiceType="specialUse" /> <!-- Declares the input method service. -->
+        <service
+            android:name=".service.InputListenerService"
             android:exported="true"
             android:permission="android.permission.BIND_INPUT_METHOD">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
-            <meta-data android:name="android.view.im"
-                android:resource="@xml/method"/>
+
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
         </service>
 
         <provider
             android:name="rikka.shizuku.ShizukuProvider"
             android:authorities="${applicationId}.shizuku"
-            android:multiprocess="false"
             android:enabled="true"
             android:exported="true"
+            android:multiprocess="false"
             android:permission="android.permission.INTERACT_ACROSS_USERS_FULL" />
     </application>
 
