feat: package universal APK also

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,8 +82,8 @@ android {
             // Specifies a list of ABIs for Gradle to create APKs for.
             include "x86_64", "x86", "armeabi-v7a", "arm64-v8a"
 
-            // Specifies that we don't want to also generate a universal APK that includes all ABIs.
-            universalApk false
+            // Specifies that we want to also generate a universal APK that includes all ABIs.
+            universalApk true
         }
     }
 
