--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,14 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/Theme.XtMapper">
+        <activity
+            android:name=".activity.ImportExportActivity"
+            android:exported="false" />
+
         <service
             android:name=".editor.EditorService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".activity.InfoActivity"
