--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+        debug {
+            applicationIdSuffix ".debug"
+            resValue("string", "app_name", "XtMapper (Debug)")
+        }
+
     }
 
     externalNativeBuild {
