--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build and upload debug APK
+name: Build and upload APK
 
 on:
   workflow_dispatch:
@@ -21,12 +21,32 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    
+    - name: Write key
+      run: |
+        if [ ! -z "${{ secrets.KEYSTORE }}" ]; then
+          {
+            echo storePassword='${{ secrets.KEYSTORE_PASSWORD }}'
+            echo keyPassword='${{ secrets.KEY_PASSWORD }}'
+            echo keyAlias='${{ secrets.KEY_ALIAS }}'
+            echo storeFile='../keystore.jks'
+          } > keystore.properties
+          echo '${{ secrets.KEYSTORE }}' | base64 -d > keystore.jks
+        fi
 
     - name: Build with Gradle
       run: ./gradlew app:assembleDebug
     
     - uses: actions/upload-artifact@v4
       with:
-        name: xtmapper-release
-        path: app/build/outputs/apk/debug/*.apk
+        name: Debug APK
+        path: app/build/outputs/apk/debug/XtMapper-universal*.apk
+         
+    - name: Build with Gradle
+      run: ./gradlew app:assembleRelease
+    
+    - uses: actions/upload-artifact@v4
+      with:
+        name: Release APK
+        path: app/build/outputs/apk/release/XtMapper-universal*.apk
          
