feat: New profile selection UI

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=myStorePassword
-keyPassword=mykeyPassword
-keyAlias=myKeyAlias
-storeFile=myStoreFileLocation
+storePassword=password
+keyPassword=password
+keyAlias=alias
+storeFile=../keystore.jks
